--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
+
 DB_CONNECTION =mongodb+srv://dbUser:dbUserPassword@cluster0.i3dzb.gcp.mongodb.net/<dbname>?retryWrites=true&w=majority
+
+AUTH0_AUDIENCE={API_IDENTIFIER}
+
+AUTH0_DOMAIN={DOMAIN}
